Finish future directions section in discussion

--- a/References/references.bib
+++ b/References/references.bib
@@ -2086,3 +2086,213 @@ PMCID: PMC7177011}
 PMCID: PMC5526324},
 	langid = {eng}
 }
+
+@article{pidsley2016,
+	title = {Critical evaluation of the Illumina MethylationEPIC BeadChip microarray for whole-genome DNA methylation profiling},
+	author = {{Pidsley}, {Ruth} and {Zotenko}, {Elena} and {Peters}, {Timothy J.} and {Lawrence}, {Mitchell G.} and {Risbridger}, {Gail P.} and {Molloy}, {Peter} and {Van Djik}, {Susan} and {Muhlhausler}, {Beverly} and {Stirzaker}, {Clare} and {Clark}, {Susan J.}},
+	year = {2016},
+	date = {2016},
+	journal = {Genome Biology},
+	pages = {208--208},
+	volume = {17},
+	number = {1},
+	doi = {10.1186/s13059-016-1066-1},
+	url = {http://genomebiology.biomedcentral.com/articles/10.1186/s13059-016-1066-1}
+}
+
+@article{price2013a,
+	title = {Additional annotation enhances potential for biologically-relevant analysis of the Illumina Infinium HumanMethylation450 BeadChip array},
+	author = {{Price}, {Magda E} and {Cotton}, {Allison M} and {Lam}, {Lucia L} and {Farré}, {Pau} and {Emberly}, {Eldon} and {Brown}, {Carolyn J} and {Robinson}, {Wendy P} and {Kobor}, {Michael S}},
+	year = {2013},
+	month = {03},
+	date = {2013-03},
+	journal = {Epigenetics & Chromatin},
+	pages = {4--4},
+	volume = {6},
+	number = {1},
+	doi = {10.1186/1756-8935-6-4},
+	url = {http://epigeneticsandchromatin.biomedcentral.com/articles/10.1186/1756-8935-6-4}
+}
+
+@article{caniggia2000,
+	title = {Oxygen and placental development during the first trimester: implications for the pathophysiology of pre-eclampsia},
+	author = {{Caniggia}, {I.} and {Winter}, {J.} and {Lye}, {S. J.} and {Post}, {M.}},
+	year = {2000},
+	month = {04},
+	date = {2000-04},
+	journal = {Placenta},
+	pages = {S25--30},
+	volume = {21 Suppl A},
+	doi = {10.1053/plac.1999.0522},
+	note = {PMID: 10831118},
+	langid = {eng}
+}
+
+@article{huppertz2009,
+	title = {Oxygen as modulator of trophoblast invasion},
+	author = {{Huppertz}, {Berthold} and {Gauster}, {Martin} and {Orendi}, {Kristina} and {König}, {Julia} and {Moser}, {Gerit}},
+	year = {2009},
+	month = {07},
+	date = {2009-07},
+	journal = {Journal of Anatomy},
+	pages = {14--20},
+	volume = {215},
+	number = {1},
+	doi = {10.1111/j.1469-7580.2008.01036.x},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2714634/},
+	note = {PMID: 19215320
+PMCID: PMC2714634}
+}
+
+@article{huppertz2020,
+	title = {Biology of preeclampsia: Combined actions of angiogenic factors, their receptors and placental proteins},
+	author = {{Huppertz}, {Berthold}},
+	year = {2020},
+	month = {02},
+	date = {2020-02-01},
+	journal = {Biochimica et Biophysica Acta (BBA) - Molecular Basis of Disease},
+	pages = {165349},
+	series = {Membrane Transporters and Receptors in Pregnancy Metabolic Complications},
+	volume = {1866},
+	number = {2},
+	doi = {10.1016/j.bbadis.2018.11.024},
+	url = {https://www.sciencedirect.com/science/article/pii/S0925443918304861},
+	langid = {en}
+}
+
+@article{masuzaki2004,
+	title = {Detection of cell free placental DNA in maternal plasma: direct evidence from three cases of confined placental mosaicism},
+	author = {{Masuzaki}, {H.} and {Miura}, {K.} and {Yoshiura}, {K.-i} and {Yoshimura}, {S.} and {Niikawa}, {N.} and {Ishimaru}, {T.}},
+	year = {2004},
+	month = {04},
+	date = {2004-04-01},
+	journal = {Journal of Medical Genetics},
+	pages = {289--292},
+	volume = {41},
+	number = {4},
+	doi = {10.1136/jmg.2003.015784},
+	url = {https://jmg.bmj.com/content/41/4/289},
+	note = {Publisher: BMJ Publishing Group Ltd
+Section: Letters to JMG
+PMID: 15060106},
+	langid = {en}
+}
+
+@article{taglauer2014,
+	title = {Review: Cell-free fetal DNA in the maternal circulation as an indication of placental health and disease},
+	author = {{Taglauer}, {E. S.} and {Wilkins-Haug}, {L.} and {Bianchi}, {D. W.}},
+	year = {2014},
+	month = {02},
+	date = {2014-02-01},
+	journal = {Placenta},
+	pages = {S64--S68},
+	series = {Models for Molecular Understanding of Placental Development and Associated Disorders},
+	volume = {35},
+	doi = {10.1016/j.placenta.2013.11.014},
+	url = {https://www.sciencedirect.com/science/article/pii/S0143400413008345},
+	langid = {en}
+}
+
+@article{turco2018,
+	title = {Trophoblast organoids as a model for maternal{\textendash}fetal interactions during human placentation},
+	author = {{Turco}, {Margherita Y.} and {Gardner}, {Lucy} and {Kay}, {Richard G.} and {Hamilton}, {Russell S.} and {Prater}, {Malwina} and {Hollinshead}, {Michael S.} and {McWhinnie}, {Alasdair} and {Esposito}, {Laura} and {Fernando}, {Ridma} and {Skelton}, {Helen} and {Reimann}, {Frank} and {Gribble}, {Fiona M.} and {Sharkey}, {Andrew} and {Marsh}, {Steven G. E.} and {O{\textquoteright}Rahilly}, {Stephen} and {Hemberger}, {Myriam} and {Burton}, {Graham J.} and {Moffett}, {Ashley}},
+	year = {2018},
+	month = {12},
+	date = {2018-12},
+	journal = {Nature},
+	pages = {263--267},
+	volume = {564},
+	number = {7735},
+	doi = {10.1038/s41586-018-0753-3},
+	url = {https://www.nature.com/articles/s41586-018-0753-3},
+	note = {Bandiera{\_}abtest: a
+Cg{\_}type: Nature Research Journals
+Number: 7735
+Primary{\_}atype: Research
+Publisher: Nature Publishing Group
+Subject{\_}term: Biological techniques;Developmental biology
+Subject{\_}term{\_}id: biological-techniques;developmental-biology},
+	langid = {en}
+}
+
+@article{royal2010,
+	title = {Inferring Genetic Ancestry: Opportunities, Challenges, and Implications},
+	author = {{Royal}, {Charmaine D.} and {Novembre}, {John} and {Fullerton}, {Stephanie M.} and {Goldstein}, {David B.} and {Long}, {Jeffrey C.} and {Bamshad}, {Michael J.} and {Clark}, {Andrew G.}},
+	year = {2010},
+	month = {05},
+	date = {2010-05},
+	journal = {The American Journal of Human Genetics},
+	pages = {661--673},
+	volume = {86},
+	number = {5},
+	doi = {10.1016/J.AJHG.2010.03.011},
+	url = {https://www.sciencedirect.com/science/article/pii/S0002929710001552#bib38}
+}
+
+@article{capper2018,
+	title = {DNA methylation-based classification of central nervous system tumours},
+	author = {{Capper}, {David} and {Jones}, {David T. W.} and {Sill}, {Martin} and {Hovestadt}, {Volker} and {Schrimpf}, {Daniel} and {Sturm}, {Dominik} and {Koelsche}, {Christian} and {Sahm}, {Felix} and {Chavez}, {Lukas} and {Reuss}, {David E.} and {Kratz}, {Annekathrin} and {Wefers}, {Annika K.} and {Huang}, {Kristin} and {Pajtler}, {Kristian W.} and {Schweizer}, {Leonille} and {Stichel}, {Damian} and {Olar}, {Adriana} and {Engel}, {Nils W.} and {Lindenberg}, {Kerstin} and {Harter}, {Patrick N.} and {Braczynski}, {Anne K.} and {Plate}, {Karl H.} and {Dohmen}, {Hildegard} and {Garvalov}, {Boyan K.} and {Coras}, {Roland} and {Hölsken}, {Annett} and {Hewer}, {Ekkehard} and {Bewerunge-Hudler}, {Melanie} and {Schick}, {Matthias} and {Fischer}, {Roger} and {Beschorner}, {Rudi} and {Schittenhelm}, {Jens} and {Staszewski}, {Ori} and {Wani}, {Khalida} and {Varlet}, {Pascale} and {Pages}, {Melanie} and {Temming}, {Petra} and {Lohmann}, {Dietmar} and {Selt}, {Florian} and {Witt}, {Hendrik} and {Milde}, {Till} and {Witt}, {Olaf} and {Aronica}, {Eleonora} and {Giangaspero}, {Felice} and {Rushing}, {Elisabeth} and {Scheurlen}, {Wolfram} and {Geisenberger}, {Christoph} and {Rodriguez}, {Fausto J.} and {Becker}, {Albert} and {Preusser}, {Matthias} and {Haberler}, {Christine} and {Bjerkvig}, {Rolf} and {Cryan}, {Jane} and {Farrell}, {Michael} and {Deckert}, {Martina} and {Hench}, {Jürgen} and {Frank}, {Stephan} and {Serrano}, {Jonathan} and {Kannan}, {Kasthuri} and {Tsirigos}, {Aristotelis} and {Brück}, {Wolfgang} and {Hofer}, {Silvia} and {Brehmer}, {Stefanie} and {Seiz-Rosenhagen}, {Marcel} and {Hänggi}, {Daniel} and {Hans}, {Volkmar} and {Rozsnoki}, {Stephanie} and {Hansford}, {Jordan R.} and {Kohlhof}, {Patricia} and {Kristensen}, {Bjarne W.} and {Lechner}, {Matt} and {Lopes}, {Beatriz} and {Mawrin}, {Christian} and {Ketter}, {Ralf} and {Kulozik}, {Andreas} and {Khatib}, {Ziad} and {Heppner}, {Frank} and {Koch}, {Arend} and {Jouvet}, {Anne} and {Keohane}, {Catherine} and {Mühleisen}, {Helmut} and {Mueller}, {Wolf} and {Pohl}, {Ute} and {Prinz}, {Marco} and {Benner}, {Axel} and {Zapatka}, {Marc} and {Gottardo}, {Nicholas G.} and {Driever}, {Pablo Hernáiz} and {Kramm}, {Christof M.} and {Müller}, {Hermann L.} and {Rutkowski}, {Stefan} and {von Hoff}, {Katja} and {Frühwald}, {Michael C.} and {Gnekow}, {Astrid} and {Fleischhack}, {Gudrun} and {Tippelt}, {Stephan} and {Calaminus}, {Gabriele} and {Monoranu}, {Camelia-Maria} and {Perry}, {Arie} and {Jones}, {Chris} and {Jacques}, {Thomas S.} and {Radlwimmer}, {Bernhard} and {Gessi}, {Marco} and {Pietsch}, {Torsten} and {Schramm}, {Johannes} and {Schackert}, {Gabriele} and {Westphal}, {Manfred} and {Reifenberger}, {Guido} and {Wesseling}, {Pieter} and {Weller}, {Michael} and {Collins}, {Vincent Peter} and {Blümcke}, {Ingmar} and {Bendszus}, {Martin} and {Debus}, {Jürgen} and {Huang}, {Annie} and {Jabado}, {Nada} and {Northcott}, {Paul A.} and {Paulus}, {Werner} and {Gajjar}, {Amar} and {Robinson}, {Giles W.} and {Taylor}, {Michael D.} and {Jaunmuktane}, {Zane} and {Ryzhova}, {Marina} and {Platten}, {Michael} and {Unterberg}, {Andreas} and {Wick}, {Wolfgang} and {Karajannis}, {Matthias A.} and {Mittelbronn}, {Michel} and {Acker}, {Till} and {Hartmann}, {Christian} and {Aldape}, {Kenneth} and {Schüller}, {Ulrich} and {Buslei}, {Rolf} and {Lichter}, {Peter} and {Kool}, {Marcel} and {Herold-Mende}, {Christel} and {Ellison}, {David W.} and {Hasselblatt}, {Martin} and {Snuderl}, {Matija} and {Brandner}, {Sebastian} and {Korshunov}, {Andrey} and {von Deimling}, {Andreas} and {Pfister}, {Stefan M.}},
+	year = {2018},
+	month = {03},
+	date = {2018-03},
+	journal = {Nature},
+	pages = {469--474},
+	volume = {555},
+	number = {7697},
+	doi = {10.1038/nature26000},
+	url = {http://www.nature.com/doifinder/10.1038/nature26000}
+}
+
+@article{pollheimer2018,
+	title = {Regulation of Placental Extravillous Trophoblasts by the Maternal Uterine Environment},
+	author = {{Pollheimer}, {Jürgen} and {Vondra}, {Sigrid} and {Baltayeva}, {Jennet} and {Beristain}, {Alexander Guillermo} and {Knöfler}, {Martin}},
+	year = {2018},
+	date = {2018},
+	journal = {Frontiers in Immunology},
+	pages = {2597},
+	volume = {9},
+	doi = {10.3389/fimmu.2018.02597},
+	url = {https://www.frontiersin.org/article/10.3389/fimmu.2018.02597}
+}
+
+@article{thomas2020a,
+	title = {Phenotypic and functional characterization of first-trimester human placental macrophages, Hofbauer cells},
+	author = {{Thomas}, {Jake R.} and {Appios}, {Anna} and {Zhao}, {Xiaohui} and {Dutkiewicz}, {Roksana} and {Donde}, {Maria} and {Lee}, {Colin Y.C.} and {Naidu}, {Praveena} and {Lee}, {Christopher} and {Cerveira}, {Joana} and {Liu}, {Bing} and {Ginhoux}, {Florent} and {Burton}, {Graham} and {Hamilton}, {Russell S.} and {Moffett}, {Ashley} and {Sharkey}, {Andrew} and {McGovern}, {Naomi}},
+	year = {2020},
+	month = {10},
+	date = {2020-10-19},
+	journal = {Journal of Experimental Medicine},
+	volume = {218},
+	number = {1},
+	doi = {10.1084/jem.20200891},
+	url = {https://doi.org/10.1084/jem.20200891}
+}
+
+@article{vento-tormo2018b,
+	title = {Single-cell reconstruction of the early maternal{\textendash}fetal interface in humans},
+	author = {{Vento-Tormo}, {Roser} and {Efremova}, {Mirjana} and {Botting}, {Rachel A.} and {Turco}, {Margherita Y.} and {Vento-Tormo}, {Miquel} and {Meyer}, {Kerstin B.} and {Park}, {Jong-Eun} and {Stephenson}, {Emily} and {Pola{\'{n}}ski}, {Krzysztof} and {Goncalves}, {Angela} and {Gardner}, {Lucy} and {Holmqvist}, {Staffan} and {Henriksson}, {Johan} and {Zou}, {Angela} and {Sharkey}, {Andrew M.} and {Millar}, {Ben} and {Innes}, {Barbara} and {Wood}, {Laura} and {Wilbrey-Clark}, {Anna} and {Payne}, {Rebecca P.} and {Ivarsson}, {Martin A.} and {Lisgo}, {Steve} and {Filby}, {Andrew} and {Rowitch}, {David H.} and {Bulmer}, {Judith N.} and {Wright}, {Gavin J.} and {Stubbington}, {Michael J. T.} and {Haniffa}, {Muzlifah} and {Moffett}, {Ashley} and {Teichmann}, {Sarah A.}},
+	year = {2018},
+	month = {11},
+	date = {2018-11},
+	journal = {Nature},
+	pages = {347},
+	volume = {563},
+	number = {7731},
+	doi = {10.1038/s41586-018-0698-6},
+	url = {https://www.nature.com/articles/s41586-018-0698-6},
+	langid = {En}
+}
+
+@article{tsang2017,
+	title = {Integrative single-cell and cell-free plasma RNA transcriptomics elucidates placental cellular dynamics.},
+	author = {{Tsang}, {Jason C H} and {Vong}, {Joaquim S L} and {Ji}, {Lu} and {Poon}, {Liona C Y} and {Jiang}, {Peiyong} and {Lui}, {Kathy O} and {Ni}, {Yun-Bi} and {To}, {Ka Fai} and {Cheng}, {Yvonne K Y} and {Chiu}, {Rossa W K} and {Lo}, {Yuk Ming Dennis}},
+	year = {2017},
+	month = {09},
+	date = {2017-09},
+	journal = {Proceedings of the National Academy of Sciences of the United States of America},
+	pages = {E7786--E7795},
+	volume = {114},
+	number = {37},
+	doi = {10.1073/pnas.1710470114},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/28830992}
+}
