--- a/Sections/02_Abstract.Rmd
+++ b/Sections/02_Abstract.Rmd
@@ -8,10 +8,6 @@ output:
 
 <!-- Remember, It can't be longer than 350 words! Currently way over-->
 
-The functioning of the placenta is critical for the healthy development of the fetus during pregnancy. Many perinatal health outcomes have been linked to placental-specific alterations in DNA methylation (DNAm), an epigenetic modification that regulates gene expression. Placental DNAm studies are often carried out on a population level, i.e. including hundreds of samples. Researchers tend to account for covariates such as sex, gestational age, and environmental influences, as these factors have been shown to be associated with effects on DNAm. It is now well-appreciated that genetic ancestry, ethnicity, and cell composition can explain the majority of variation in DNAm. However, genetic ancestry, ethnicity and cell-specific variation in DNAm is largely uncharacterized in the human placenta.
+DNA methylation (DNAm) is an epigenetic marker that controls gene expression in a highly cell-specific manner. Placental DNAm has been studied under various contexts, however, various sources of variation remain uncharacterized. Before we are able to understand how placental DNAm contributes to  important health-relevant contexts, we must garner an understanding of the underlying normal variation that occurs in the placental methylome. Ethnicity and genetics, for example, are established as significant contributors to DNAm, in general. DNAm is also highly cell-specific, and the placenta is a heterogeneous tissue comprised of several distinct cell populations. However, due to difficulty of isolating cell populations, most placental DNAm research is conducted on whole placental chorionic villi tissue. Isolating placental tissue without contamination from maternal tissue, such as decidua and blood, is difficult, especially in earlier gestation samples where sampling enough tissue is difficult.
 
-Ethnicity, which is self-reported, is often used as a surrogate marker for genetic ancestry, which is based on genetic markers, in population-based genomic studies. Having self-reported ethnicity in DNAm studies is an asset, since genetically-determined ancestry is often unavailable. However, self-reported ethnicity is not always collected, inconsistently defined, and sometimes poorly correlated with genetic ancestry. Therefore, there is a need for a consistently-defined marker of ethnicity or genetic ancestry for placental DNAm studies. There are existing methods for inferring genetic ancestry or ethnicity from DNAm measured on the popular 450k DNAm array, but these approaches were developed in somatic tissues and may therefore not perform as well on placental data.
-
-The etiology of many pregnancy-associated conditions involves abnormalities in cell-specific placental processes. Preeclampsia, fetal growth restriction, and placenta accrete can occur when trophoblast-mediated invasion and remodeling of maternal vasculature is defective. To date, most research has relied on cell culturing methods to investigate trophoblast function. However, findings from these in vitro studies are limited in their ability to generalize because they fail to account for the complex uterine environment that exists in vivo. Furthermore, the extent of which other cell populations in the placenta contribute to placental-mediated pathologies is highly likely, yet poorly understood. For example, fetally-derived macrophages such as Hofbauer cells are enriched in inflammatory conditions resulting from infection, but our understanding of their exact function and origins is rudimentary at best. Vessel and endothelial cells in the mesenchymal core of the chorionic villi are likely affected in pathologies associated with alterations in blood flow, but the relevance of these cells is often overlooked as well. There are significant gaps in our cell-specific understanding of placental biology, which will need to be addressed in order to understand the changes that occur under pathological conditions.
-
-Because the placenta is made up of several cell types, each with a distinct DNAm signature, whole-tissue measurements are ultimately an average of the DNAm signatures of the constituent cell types, weighted by their respective frequency in the bulk tissue sample. Therefore, observing variation in DNAm in heterogenous tissues such as the placenta can be often attributed to variation in cell composition, rather than DNAm changes that occur in the constituent cell populations. Variation in cell composition can be accounted for using physical cell counting methods, but these approaches are often challenging in a solid tissue such as the placenta. Instead, researchers are often using DNAm itself to infer cell composition. These bioinformatic algorithms, called cellular deconvolution, rely on cell-specific reference DNAm profiles from constituent cell types. Cell-specific reference DNAm profiles are available for cell deconvolution in tissues such as adult blood, cord blood, brain, and buccal; but not the placenta. Therefore, the extent of confounding from cell composition variation in placental DNAm studies is poorly understood.
+In this thesis, I hypothesize that a large proportion of the variation in placental DNAm can attributed to ethnicity, genetic ancestry, cell composition, cell-specific effects, and the presence of maternal cells. Using high density DNAm microarray profiling, and open-access genomic data repositories, I assessed these various factors in a variety of placental samples with various phenotypes. I found that ethnicity and genetic ancestry can significant contribute to placental DNAm variation in samples containing self-reports of ethnicity of Caucasian, East Asian, and African American populations. Further, I found that it is possible to predict ethnicity and genetic  with high accuracy and reliability from placental DNAm. Another major source of variation is cell-specific DNAm, which I characterized from placental samples of first trimester and term pregnancies. I found that trophoblast and Hofbauer cells are highly epigenetically distinct, and many placental epigenetic features are conserved in trophoblasts but not always in other placental cells. I developed a reference to estimate cell composition from placental chorionic villi DNAm. Lastly, I developed an approach to estimate maternal cells present in chorionic villi samples, using DNAm, and found several previously published placental DNAm studies to contain maternally-contaminated samples. Overall, I contributed to our understanding of placental DNAm, and have provided bioinformatic tools for future placental DNAm research.
